# smart_power_socket

./: .gitmodules  CMakeLists.txt  pm_static.yml  prj.conf
boards/: nrf54L15_sps.overlay
docs/: HLW8110_calibration_and_settings.md  SPS SMS Commands.xlsx  all_cmds.md  sms_commands_client.html
dts/bindings/: sps,gpio-signals.yaml  vendor-prefixes.txt
src/: alerts.cpp  alerts.hpp  app_config.cpp  app_config.hpp  device_status.cpp  device_status.hpp  main.cpp  main_polling_backup.cpp  sms_commands.cpp  sms_commands.hpp
src/cellular/: at_engine.cpp  at_engine.hpp  sim7080.cpp  sim7080.hpp
src/hardware/: adc_con.cpp  adc_con.hpp  gpio_con.cpp  gpio_con.hpp  uart_con.cpp  uart_con.hpp
src/sensors/: hlw811x.cpp  hlw811x.hpp
